# simple_link_shortener

./: .env_sample  .gitignore  main.py  pyproject.toml
src/: app.py  config.py  extensions.py
src/models/: base.py
src/models/link/: models.py
src/routes/: __init__.py
src/routes/forward/: __init__.py  endpoint.py
src/routes/link/: endpoint.py
src/schemas/general/: error.py  log.py  request.py  response.py
src/schemas/link/: request.py  response.py
src/scripts/: remove_cache.sh  run.sh  test.sh
src/services/link/: helper.py
src/utilities/errors/: utils.py
src/utilities/logger/: formatters.py  log.py
src/utilities/paginator/: paginator.py
tests/: conftest.py
tests/endpoints/: test_a_link_crud.py  test_forward.py
