[tool.poetry]
name = "link-shortener"
version = "0.0.1"
description = ""
authors = ["blueWhale"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beanie = "^1.26.0"
fastapi = "^0.111.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
